--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,4 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   text-align: center;
 }
@@ -41,4 +40,9 @@
 
 .read-the-docs {
   color: #888;
+}
+
+button:focus {
+  outline: none;
+  box-shadow: none;
 }
